--- a/.github/workflows/create_preview_env.yml
+++ b/.github/workflows/create_preview_env.yml
@@ -58,9 +58,11 @@ jobs:
           echo "Branch being used: $BRANCH_NAME"
 
           SERVICE_ID=$(echo "$LIST_BODY" | jq -r ".[] | select(.service.name == \"$SERVICE_NAME\") | [.] | first | .service.id" 2>/dev/null | head -1)
+          SERVICE_URL=$(echo "$LIST_BODY" | jq -r ".[] | select(.service.name == \"$SERVICE_NAME\") | [.] | first | .service.serviceDetails.url" 2>/dev/null | head -1)
           
           if [ -n "$SERVICE_ID" ] && [ "$SERVICE_ID" != "null" ]; then
             echo "Service '$SERVICE_NAME' already exists with ID: $SERVICE_ID"
+            echo "Service URL: $SERVICE_URL"
           else
             echo "Service '$SERVICE_NAME' does not exist, creating new one..."
             SERVICE_RAW=$(curl -sS --noproxy api.render.com --retry 3 --retry-delay 2 --request POST \
@@ -86,7 +88,9 @@ jobs:
             echo "Service create body: $SERVICE_BODY"
 
             SERVICE_ID=$(echo "$SERVICE_BODY" | jq -r '.service.id' 2>/dev/null)
+            SERVICE_URL=$(echo "$SERVICE_BODY" | jq -r '.service.serviceDetails.url' 2>/dev/null)
             echo "Extracted Service ID: $SERVICE_ID"
+            echo "Extracted Service URL: $SERVICE_URL"
           fi
           
           if [ -z "$SERVICE_ID" ] || [ "$SERVICE_ID" = "null" ]; then
@@ -95,14 +99,67 @@ jobs:
           fi
           
           echo "$SERVICE_ID" > service-id.txt
+          echo "$SERVICE_URL" > service-url.txt
           echo "SERVICE_ID=$SERVICE_ID" >> $GITHUB_OUTPUT
+          echo "SERVICE_URL=$SERVICE_URL" >> $GITHUB_OUTPUT
 
       - name: Upload service ID artifact
         uses: actions/upload-artifact@v4
         with:
           name: service-id
           path: service-id.txt
+
+      - name: Upload service URL artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: service-url
+          path: service-url.txt
           
-      - name: Post URL to PR comment (placeholder)
-        # Add a step to comment the preview URL back to the GitHub Pull Request
-        run: echo "Preview service is available at some-url-for-pr-${{ github.event.pull_request.number }}"
+      - name: Post URL to PR comment
+        if: always()
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const fs = require('fs');
+            let serviceUrl = 'URL not available';
+            try {
+              if (fs.existsSync('service-url.txt')) {
+                serviceUrl = fs.readFileSync('service-url.txt', 'utf8').trim();
+              }
+            } catch (e) {
+              console.log('Could not read service-url.txt:', e.message);
+            }
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: `🚀 Preview environment deployed!\n\n**Service URL:** ${serviceUrl}\n\nThis preview will be cleaned up when the PR is closed.`
+            });
+
+      - name: Create PR check with service URL
+        if: always()
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const fs = require('fs');
+            let serviceUrl = 'URL not available';
+            try {
+              if (fs.existsSync('service-url.txt')) {
+                serviceUrl = fs.readFileSync('service-url.txt', 'utf8').trim();
+              }
+            } catch (e) {
+              console.log('Could not read service-url.txt:', e.message);
+            }
+            github.rest.checks.create({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              name: 'Preview Environment',
+              head_sha: context.payload.pull_request.head.sha,
+              status: 'completed',
+              conclusion: 'success',
+              output: {
+                title: '🚀 Preview Deployed',
+                summary: `Your preview environment is ready!`,
+                text: `**Service URL:** [${serviceUrl}](${serviceUrl})\n\nThis preview will be automatically cleaned up when the PR is closed.`
+              }
+            });
