--- a/.github/workflows/create_preview_env.yml
+++ b/.github/workflows/create_preview_env.yml
@@ -115,14 +115,36 @@ jobs:
           name: service-url
           path: service-url.txt
           
-      - name: Post URL to job summary
+      - name: Post URL to PR review comment
         if: always()
-        run: |
-          SERVICE_URL=$(cat service-url.txt 2>/dev/null || echo 'URL not available')
-          cat >> $GITHUB_STEP_SUMMARY <<EOF
-          ## 🚀 Preview Environment Deployed
-          
-          **Service URL:** [$SERVICE_URL]($SERVICE_URL)
-          
-          This preview will be automatically cleaned up when the PR is closed.
-          EOF
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const fs = require('fs');
+            let serviceUrl = 'URL not available';
+            try {
+              if (fs.existsSync('service-url.txt')) {
+                serviceUrl = fs.readFileSync('service-url.txt', 'utf8').trim();
+              }
+            } catch (e) {
+              console.log('Could not read service-url.txt');
+            }
+            
+            // Post as review comment (works on forks)
+            github.rest.pulls.createReview({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              pull_number: context.issue.number,
+              body: `🚀 Preview environment deployed!\n\n**Service URL:** ${serviceUrl}\n\nThis preview will be cleaned up when the PR is closed.`,
+              event: 'COMMENT'
+            }).catch(err => {
+              console.log('Review comment failed, trying simple comment...');
+              // Fallback: try regular comment
+              return github.rest.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: context.issue.number,
+                body: `🚀 Preview environment deployed!\n\n**Service URL:** ${serviceUrl}\n\nThis preview will be cleaned up when the PR is closed.`
+              });
+            });
