--- a/.github/workflows/destory_preview_env.yml
+++ b/.github/workflows/destory_preview_env.yml
@@ -8,6 +8,34 @@ jobs:
   destroy-preview:
     runs-on: ubuntu-latest
     steps:
+      - name: Remove bot comments
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            try {
+              const comments = await github.rest.issues.listComments({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: context.issue.number
+              });
+              
+              for (const comment of comments.data) {
+                // Delete comments that look like bot service URL comments
+                if (comment.user.type === 'Bot' && comment.body.includes('Preview environment deployed')) {
+                  await github.rest.issues.deleteComment({
+                    owner: context.repo.owner,
+                    repo: context.repo.repo,
+                    comment_id: comment.id
+                  });
+                  console.log('Deleted bot comment:', comment.id);
+                }
+              }
+            } catch (err) {
+              console.log('Could not delete comments:', err.message);
+              // Don't fail the workflow if comment deletion fails
+            }
+      
       - name: Download service ID artifact
         uses: actions/download-artifact@v4
         with:
